modules/traefik/base/resources/ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  annotations:
    ingressclass.kubernetes.io/is-default-class: "false"
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik
  name: "traefik"
spec:
  controller: "traefik.io/traefik"
