modules/traefik/base/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: traefik
      app.kubernetes.io/instance: traefik
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: "25%"
      maxUnavailable: 0
  minReadySeconds: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: traefik
        app.kubernetes.io/instance: traefik
    spec:
      serviceAccountName: traefik
      terminationGracePeriodSeconds: 60
      hostNetwork: false
      containers:
      - image: "traefik:2.8.0"
        imagePullPolicy: IfNotPresent
        name: traefik
        resources:
        readinessProbe:
          httpGet:
            path: /ping
            port: 9000
          failureThreshold: 1
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        livenessProbe:
          httpGet:
            path: /ping
            port: 9000
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        ports:
        - name: "metrics"
          containerPort: 9100
          protocol: "TCP"
        - name: "traefik"
          containerPort: 9000
          protocol: "TCP"
        - name: "web"
          containerPort: 8080
          protocol: "TCP"
        - name: "websecure"
          containerPort: 8443
          protocol: "TCP"
        securityContext:
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsGroup: 65532
          runAsNonRoot: true
          runAsUser: 65532
        volumeMounts:
          - name: data
            mountPath: /data
          - name: tmp
            mountPath: /tmp
        args:
          - "--global.checknewversion=false"
          - "--global.sendanonymoususage=false"
          - "--api.dashboard=true"
          - "--pilot.dashboard=false"
          - "--ping=true"
          - "--log.format=json"
          - "--accesslog.format=json"
          - "--log.level=WARN"
          - "--entryPoints.web.address=:8080/tcp"
          - "--entryPoints.web.transport.lifecycle.gracetimeout=30"
          - "--entrypoints.web.transport.lifecycle.requestacceptgracetimeout=29"
          - "--entrypoints.web.http.redirections.entryPoint.to=:443"
          - "--entrypoints.web.http.redirections.entryPoint.scheme=https"
          - "--entrypoints.web.http.redirections.entrypoint.priority=0"
          - "--entryPoints.websecure.address=:8443/tcp"
          - "--entryPoints.websecure.transport.lifecycle.gracetimeout=30"
          - "--entrypoints.websecure.transport.lifecycle.requestacceptgracetimeout=29"
          - "--entrypoints.websecure.http.tls=true"
          - "--entryPoints.traefik.address=:9000/tcp"
          - "--entryPoints.traefik.transport.lifecycle.gracetimeout=1"
          - "--entrypoints.traefik.transport.lifecycle.requestacceptgracetimeout=0"
          - "--entrypoints.metrics.address=:9100/tcp"
          - "--providers.kubernetesingress"
          - "--providers.kubernetesingress.allowexternalnameservices=false"
          - "--providers.kubernetesingress.ingressclass=traefik"
          - "--providers.kubernetescrd"
          - "--providers.kubernetescrd.allowcrossnamespace=true"
          - "--providers.kubernetescrd.allowexternalnameservices=false"
          - "--metrics=true"
          - "--metrics.prometheus=true"
      volumes:
        - name: data
          emptyDir: {}
        - name: tmp
          emptyDir: {}
      securityContext:
        fsGroup: 65532
